--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@ a:link {
 	margin-top: -38px;
 }
 
+div#primary.widget-area ul li h3.widget-title {
+	font-size: 18px;
+	line-height: 24px;
+	margin-bottom: 10px;
+}
+
+div#primary.widget-area ul li ul li {
+	font-size: 14px;
+	line-height: 18px;
+	margin-bottom: 6px;
+}
+
