--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ Template: twentyten
 @import url("../twentyten/style.css");
 
 body {
-	background-color: #b7d5e5;
+	background-color: #fff;
+	background-image: url("img/bg.png");
+	background-attachment: fixed;
 }
 
 a:link {
